# Circle-Seeker-RL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/benchmarks/: ppo_obstacle_benchmark.md
scripts/: generate_readme_media.py  plot_training_metrics.py
src/: __init__.py  env.py  evaluate_baselines.py  evaluate_ppo.py  gym_env.py  manual_play.py  ppo.py  random_play.py  renderer.py  train_ppo.py  watch_baseline.py  watch_ppo.py
tests/: test_env.py  test_evaluate_baselines.py  test_gym_env.py  test_plot_training_metrics.py  test_ppo.py  test_renderer.py
