[project]
name = "circle-seeker-rl"
version = "0.1.0"
description = "Simple 2D circle-seeking reinforcement learning environment prototype."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "gymnasium>=1.3.0",
    "numpy>=1.26",
    "pygame>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
