[project]
name = "circle-seeker-rl"
version = "0.1.0"
description = "From-scratch PPO implementation from the paper on a 2D circle-seeking RL environment."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "gymnasium>=1.3.0",
    "numpy>=1.26",
    "pygame>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
